[package]
name = "telebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

web3_rust_wrapper = "0.2.8"
web3 = "0.18.0"
indicatif = "0.16.2"
serde = "1.0.137"
serde_json = "1.0.81"
itertools = "0.10.3"
hex-literal = "0.3.4"